chore: init repo from iNtuitionP/YOLOV3P and normalize line endings (LF)
- Imported from iNtuitionP/YOLOV3P@<upstream-commit>
- Added .gitattributes (* text=auto eol=lf)
- Ran  to convert CRLF→LF
- No functional changes, only line endings & metadata

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 numpy
-torch>=1.7.0
+# CUDA version에 맞는 torch와 torchvision 수동 설치
+# torch>=1.7.0
+# torchvision>=0.10.0
 opencv_python
 loguru
 scikit-image
 tqdm
-torchvision>=0.10.0
 Pillow
 thop
 ninja
